# Archiver

./: CMakeLists.txt  README.md
include/: bits_io.hpp  huffman_archiver.hpp  huffman_exceptions.hpp  huffman_tree.hpp
src/: bits_io.cpp  huffman_archiver.cpp  huffman_exceptions.cpp  huffman_tree.cpp  main.cpp
test/: integration_test.cpp  test_exceptions.cpp  tree_test.cpp
test/samples/integration_tests/: 0.txt  0_zipped.txt  1.txt  10.txt  10_zipped.txt  11.txt  11_zipped.txt  12.txt  12_zipped.txt  13_answer.txt  13_zipped.txt  14_answer.txt  14_zipped.txt  15_answer.txt  15_zipped.txt  16_answer.txt  16_zipped.txt  17_answer.txt  17_zipped.txt  18_answer.txt  18_zipped.txt  19.txt  19_zipped.txt  1_zipped.txt  2.txt  20.txt  20_zipped.txt  21.txt  21_zipped.txt  22_answer.txt  22_zipped.txt  23.txt  23_zipped.txt  24.txt  24_zipped.txt  2_zipped.txt  3.txt  3_zipped.txt  4_answer.txt  4_zipped.txt  (+14 more)
test_include/: doctest.h
